# Faculty

./: .gitignore  README.md
AF/: main.cpp
BD/: README.md
BD/laborator/: lab10  lab11  lab12  lab1part1  lab2  lab3  lab4  lab5  lab6  lab7  lab9
BD/proiect/: Lupascu_Miruna_creare_inserare.txt  Lupascu_Miruna_exemple.txt  Lupascu_Miruna_proiect.docx  cod.txt  conexiune_oracle.docx  ~$pascu_Miruna_proiect.docx  ~$roiect.docx
Data Structures/Fibonacci Heap/: main.cpp  main.py  mergeheap.in
Data Structures/Sorting algorithms/: Readme.md  input.in  main.cpp
LFA/Lab 1/: Readme.md  input.txt  main.py
LFA/Lab 2/: Readme.md  input.txt  main.py
POO/: Readme.md  desciere.txt
POO/Colocvii/2020/: CMakeLists.txt  Dezinfectant.cpp  Dezinfectant.h  DezinfectantBacterii.cpp  DezinfectantBacterii.h  DezinfectantFungi.cpp  DezinfectantFungi.h  DezinfectantVirusuri.cpp  DezinfectantVirusuri.h  Masca.cpp  Masca.h  MascaChirurgicala.cpp  MascaChirurgicala.h  MascaPolicarbonat.cpp  MascaPolicarbonat.h  Readme.md  main.cpp
POO/Tema1/: CMakeLists.txt  input.txt  main.cpp  main.h  patiserie.cpp  patiserie.h  personal.cpp  personal.h  produs.cpp  produs.h
POO/Tema2/: CMakeLists.txt  experimentat.cpp  experimentat.h  gramaj_exception.h  input.txt  main.cpp  manager.cpp  manager.h  novice.cpp  novice.h  patiserie.cpp  patiserie.h  personal.cpp  personal.h  placinta.cpp  placinta.h  pret_exception.h  produs.cpp  produs.h  reprezentant.cpp  tip_exception.cpp
POO/Tema3/: experimentat.cpp  input.txt  (+14 more)
TW/: .gitignore  denumire.txt  index.js  main.js  package-lock.json  package.json
(+69 files in other folders)
